--- a/package.json
+++ b/package.json
@@ -38,5 +38,24 @@
     "undici": "^5.26.0",
     "vite": "^5.0.6",
     "vite-tsconfig-paths": "^4.2.1"
+  },
+  "dependencies": {
+    "@iconify-json/carbon": "^1.1.21",
+    "@iconify-json/ri": "^1.1.12",
+    "@iconify-json/simple-icons": "^1.1.85",
+    "@types/markdown-it": "^13.0.6",
+    "@unocss/reset": "^0.57.3",
+    "highlight.js": "^11.9.0",
+    "html-to-image": "^1.11.11",
+    "katex": "^0.16.9",
+    "unocss": "^0.57.3",
+    "markdown-it": "^13.0.2",
+    "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-kbd": "^2.2.2",
+    "array-keyed-map": "^2.1.3",
+    "eventsource-parser": "^1.1.1",
+    "fzf": "^0.5.2",
+    "jose": "^5.2.0"
   }
 }
