--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/markdown-it": "^13.0.7",
     "@unocss/reset": "^0.58.3",
     "array-keyed-map": "^2.1.3",
+    "daisyui": "^4.6.0",
     "eventsource-parser": "^1.1.1",
     "fzf": "^0.5.2",
     "highlight.js": "^11.9.0",
