--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/deno/vite.config.ts",
+    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
@@ -38,9 +38,9 @@
     "prettier": "^3.2.5",
     "typescript": "5.3.3",
     "undici": "*",
+    "vercel": "^29.1.1",
     "vite": "^5.1.4",
-    "vite-tsconfig-paths": "^4.2.1",
-    "vercel": "^33.5.3"
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
     "@iconify-json/carbon": "^1.1.31",
