--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "markdown-it-katex": "^2.0.3",
     "markdown-it-kbd": "^2.2.2",
     "sass": "^1.71.1",
-    "unocss": "^0.58.5"
+    "unocss": "^0.58.5",
+    "unocss-preset-extra": "^0.5.3"
   }
 }
