--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-qwik-empty-starter",
+  "name": "qwik-chat",
   "description": "App with Routing built-in ready to create your app",
   "engines": {
     "node": ">=18"
