--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@auth/core": "^0.13.0",
     "@builder.io/qwik": "^1.5.0",
+    "@builder.io/qwik-auth": "0.1.1",
     "@builder.io/qwik-city": "^1.5.0",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
