--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.server": "vite build -c adapters/aws-lambda/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "vercel deploy",
+    "deploy": "serverless deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "deno run --allow-net --allow-read --allow-env server/entry.deno.js",
+    "serve": "qwik build && serverless offline",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
@@ -38,6 +38,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-qwik": "^1.5.0",
     "prettier": "^3.2.5",
+    "serverless": "^3.38.0",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^13.3.2",
+    "source-map-support": "^0.5.21",
     "typescript": "5.3.3",
     "undici": "^6.7.0",
     "vercel": "^33.5.3",
