--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "deno run --allow-net --allow-read --allow-env server/entry.deno.js",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@auth/core": "^0.28.1",
+    "@auth/core": "^0.13.0",
     "@builder.io/qwik": "^1.5.1",
-    "@builder.io/qwik-auth": "0.1.3",
+    "@builder.io/qwik-auth": "0.1.1",
     "@builder.io/qwik-city": "^1.5.1",
     "@types/eslint": "^8.56.6",
     "@types/node": "^20.11.30",
@@ -38,11 +37,11 @@
     "eslint": "^8.57.0",
     "eslint-plugin-qwik": "^1.5.1",
     "prettier": "^3.2.5",
-    "typescript": "5.4.3",
-    "undici": "^6.10.2",
+    "typescript": "5.3.3",
+    "undici": "*",
     "vercel": "^33.6.1",
-    "vite": "^5.2.6",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite": "^5.1.4",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
     "@iconify-json/carbon": "^1.1.31",
