--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
   },
   "devDependencies": {
     "@auth/core": "^0.13.0",
-    "@builder.io/qwik": "^1.5.0",
+    "@builder.io/qwik": "^1.5.1",
     "@builder.io/qwik-auth": "0.1.1",
-    "@builder.io/qwik-city": "^1.5.0",
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.24",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@builder.io/qwik-city": "^1.5.1",
+    "@types/eslint": "^8.56.7",
+    "@types/node": "^20.12.2",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-qwik": "^1.5.0",
+    "eslint-plugin-qwik": "^1.5.1",
     "prettier": "^3.2.5",
-    "typescript": "5.3.3",
-    "undici": "^6.7.0",
-    "vercel": "^33.5.3",
-    "vite": "^5.1.5",
-    "vite-tsconfig-paths": "^4.3.1"
+    "typescript": "5.4.3",
+    "undici": "^6.10.2",
+    "vercel": "^33.6.2",
+    "vite": "^5.2.7",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/ri": "^1.1.20",
     "@iconify-json/simple-icons": "^1.1.97",
-    "@rollup/rollup-darwin-arm64": "^4.13.0",
+    "@rollup/rollup-darwin-arm64": "^4.13.2",
     "@types/markdown-it": "^13.0.7",
-    "@unocss/reset": "^0.58.7",
+    "@unocss/reset": "0.59.0-beta.1",
     "array-keyed-map": "^2.1.3",
     "daisyui": "^4.9.0",
     "eventsource-parser": "^1.1.2",
@@ -63,7 +63,7 @@
     "markdown-it-katex": "^2.0.3",
     "markdown-it-kbd": "^2.2.2",
     "sass": "^1.72.0",
-    "unocss": "^0.58.7",
+    "unocss": "0.59.0-beta.1",
     "unocss-preset-extra": "^0.5.3"
   }
 }
