--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "vite-tsconfig-paths": "^4.3.1"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.290.0",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/ri": "^1.1.20",
     "@iconify-json/simple-icons": "^1.1.94",
     "@types/markdown-it": "^13.0.7",
+    "@types/uuid": "^9.0.8",
     "@unocss/reset": "^0.58.5",
     "array-keyed-map": "^2.1.3",
     "daisyui": "^4.7.2",
@@ -64,6 +66,7 @@
     "markdown-it-kbd": "^2.2.2",
     "sass": "^1.71.1",
     "unocss": "^0.58.5",
-    "unocss-preset-extra": "^0.5.3"
+    "unocss-preset-extra": "^0.5.3",
+    "uuid": "^8.3.2"
   }
 }
