--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/markdown-it": "^13.0.7",
     "@types/uuid": "^9.0.8",
     "@unocss/reset": "^0.58.5",
+    "@unscatty/unocss-preset-daisy": "^1.0.0",
     "array-keyed-map": "^2.1.3",
     "daisyui": "^4.7.2",
     "eventsource-parser": "^1.1.2",
