--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@auth/core": "^0.13.0",
-    "@builder.io/qwik": "^1.5.0",
-    "@builder.io/qwik-auth": "0.1.1",
-    "@builder.io/qwik-city": "^1.5.0",
+    "@auth/core": "0.21.0",
+    "@builder.io/qwik": "1.5.2",
+    "@builder.io/qwik-auth": "0.1.3",
+    "@builder.io/qwik-city": "1.5.2",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-qwik": "^1.5.0",
+    "eslint-plugin-qwik": "1.5.2",
     "prettier": "^3.2.5",
     "typescript": "5.3.3",
     "undici": "^6.7.0",
