--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.290.0",
+    "@cloudflare/workers-types": "^4.20240423.0",
+    "@ditadi/qwik-hooks": "0.1.6-beta.1",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/ri": "^1.1.20",
     "@iconify-json/simple-icons": "^1.1.94",
@@ -58,14 +60,13 @@
     "daisyui": "^4.7.2",
     "eventsource-parser": "^1.1.2",
     "fzf": "^0.5.2",
-    "highlight.js": "^11.9.0",
     "html-to-image": "^1.11.11",
     "jose": "^5.2.2",
     "katex": "^0.16.9",
     "markdown-it": "^14.0.0",
-    "markdown-it-highlightjs": "^4.0.1",
     "markdown-it-katex": "^2.0.3",
     "markdown-it-kbd": "^2.2.2",
+    "markdown-it-prism": "^2.3.0",
     "sass": "^1.72.0",
     "unocss": "^0.58.7",
     "unocss-preset-extra": "^0.5.3"
