--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
   },
   "devDependencies": {
     "@auth/core": "0.21.0",
-    "@builder.io/qwik": "1.5.2",
+    "@builder.io/qwik": "1.5.4",
     "@builder.io/qwik-auth": "0.1.3",
-    "@builder.io/qwik-city": "1.5.2",
+    "@builder.io/qwik-city": "1.5.4",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-qwik": "1.5.2",
+    "eslint-plugin-qwik": "1.5.4",
     "prettier": "^3.2.5",
     "typescript": "5.3.3",
     "undici": "^6.7.0",
@@ -57,6 +57,7 @@
     "eventsource-parser": "^1.1.2",
     "fzf": "^0.5.2",
     "highlight.js": "^11.9.0",
+    "hono": "^4.3.8",
     "html-to-image": "^1.11.11",
     "jose": "^5.2.2",
     "katex": "^0.16.9",
