--- a/package.json
+++ b/package.json
@@ -20,54 +20,55 @@
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
+    "lint": "eslint",
     "preview": "qwik build preview && vite preview --open",
     "serve": "deno run --allow-net --allow-read --allow-env server/entry.deno.js",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@auth/core": "0.21.0",
-    "@builder.io/qwik": "1.5.4",
-    "@builder.io/qwik-auth": "0.1.3",
-    "@builder.io/qwik-city": "1.5.4",
+    "@auth/core": "0.31.0",
+    "@builder.io/qwik": "1.5.5",
+    "@builder.io/qwik-auth": "0.2.0",
+    "@builder.io/qwik-city": "1.5.5",
     "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.24",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-qwik": "1.5.4",
+    "eslint-plugin-qwik": "1.5.5",
     "prettier": "^3.2.5",
-    "typescript": "5.3.3",
-    "undici": "^6.7.0",
-    "vercel": "^33.5.3",
-    "vite": "^5.1.5",
-    "vite-tsconfig-paths": "^4.3.1"
+    "typescript": "5.4.5",
+    "undici": "^6.18.0",
+    "vercel": "^34.2.0",
+    "vite": "^5.2.11",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
-    "@iconify-json/carbon": "^1.1.31",
+    "@formkit/auto-animate": "^0.8.2",
+    "@iconify-json/carbon": "^1.1.33",
     "@iconify-json/ri": "^1.1.20",
-    "@iconify-json/simple-icons": "^1.1.94",
-    "@types/markdown-it": "^13.0.7",
+    "@iconify-json/simple-icons": "^1.1.102",
+    "@types/markdown-it": "^14.1.1",
     "@types/uuid": "^9.0.8",
-    "@unocss/reset": "^0.58.5",
+    "@unocss/reset": "^0.60.3",
     "@unscatty/unocss-preset-daisy": "^1.0.0",
     "array-keyed-map": "^2.1.3",
-    "daisyui": "^4.7.2",
+    "daisyui": "^4.11.1",
     "eventsource-parser": "^1.1.2",
     "fzf": "^0.5.2",
     "highlight.js": "^11.9.0",
-    "hono": "^4.3.8",
+    "hono": "^4.3.9",
     "html-to-image": "^1.11.11",
-    "jose": "^5.2.2",
-    "katex": "^0.16.9",
-    "markdown-it": "^14.0.0",
-    "markdown-it-highlightjs": "^4.0.1",
+    "jose": "^5.3.0",
+    "katex": "^0.16.10",
+    "markdown-it": "^14.1.0",
+    "markdown-it-highlightjs": "^4.1.0",
     "markdown-it-katex": "^2.0.3",
     "markdown-it-kbd": "^2.2.2",
-    "sass": "^1.71.1",
-    "unocss": "^0.58.5",
+    "sass": "^1.77.2",
+    "unocss": "^0.60.3",
     "unocss-preset-extra": "^0.5.3",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.1"
   }
 }
