--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@auth/core": "0.21.0",
-    "@builder.io/qwik": "1.5.5",
-    "@builder.io/qwik-auth": "0.1.3",
-    "@builder.io/qwik-city": "1.5.5",
+    "@auth/core": "0.31.0",
+    "@builder.io/qwik": "^1.7.0",
+    "@builder.io/qwik-auth": "0.2.2",
+    "@builder.io/qwik-city": "^1.7.0",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
-    "eslint": "^9.3.0",
-    "eslint-plugin-qwik": "1.5.5",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-qwik": "^1.7.0",
     "prettier": "^3.2.5",
     "typescript": "5.4.5",
-    "undici": "^6.18.1",
+    "undici": "*",
     "vercel": "^34.2.1",
     "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2",
@@ -50,6 +50,7 @@
     "@iconify-json/carbon": "^1.1.33",
     "@iconify-json/ri": "^1.1.20",
     "@iconify-json/simple-icons": "^1.1.102",
+    "@types/lodash": "^4.17.6",
     "@types/markdown-it": "^14.1.1",
     "@types/uuid": "^9.0.8",
     "@unocss/reset": "^0.60.3",
@@ -63,6 +64,7 @@
     "html-to-image": "^1.11.11",
     "jose": "^5.3.0",
     "katex": "^0.16.10",
+    "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
     "markdown-it-highlightjs": "^4.1.0",
     "markdown-it-katex": "^2.0.3",
