--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   },
   "devDependencies": {
     "@auth/core": "0.31.0",
-    "@builder.io/qwik": "^1.7.0",
-    "@builder.io/qwik-auth": "0.2.2",
-    "@builder.io/qwik-city": "^1.7.0",
+    "@builder.io/qwik": "latest",
+    "@builder.io/qwik-auth": "latest",
+    "@builder.io/qwik-city": "latest",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-qwik": "^1.7.0",
+    "eslint-plugin-qwik": "latest",
     "prettier": "^3.2.5",
     "typescript": "5.4.5",
     "undici": "*",
